--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -1,14 +1,16 @@
+body{
+    height: 100%;
+    overflow: hidden;
+}
+
+
 #map{
-    height: 500px;
+    height: 50vh;
+    width: 75%;
+    float: right;
 }
 
-.gutter {
-    background-color: #eee;
-    background-repeat: no-repeat;
-    background-position: 50%;
+#chart{
+    height: 49vh;
 }
 
-.gutter.gutter-vertical {
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
-    cursor: row-resize;
-}
