Changed onclick event to open charts on datastream clicks instead of marker

--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -3,6 +3,11 @@ body{
     overflow: hidden;
 }
 
+li:hover{
+    color: blue;
+    cursor: pointer;
+}
+
 #thingy{
     height: 50vh;
     width: 25%;
