--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -45,6 +45,18 @@ h1{
     float: left;
 }
 
+#thingy div:hover{
+    box-shadow: 2px 2px 5px rgba(0,0,0,.2);
+}
+
+#close{
+    margin-right: 20px;
+    display: inline;
+    float: right;
+    padding: 5px;
+    background: #ccc;
+}
+
 
 #thingy div{
     flex-grow: 1;
