--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -49,13 +49,18 @@ h1{
     box-shadow: 2px 2px 5px rgba(0,0,0,.2);
 }
 
-#close{
+#datastreamlist span{
     margin-right: 20px;
     display: inline;
     float: right;
     padding: 5px;
     background: #ccc;
 }
+#datastreamlist span:hover{
+    background: dimgrey;
+    cursor: pointer;
+}
+
 
 
 #thingy div{
