--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -1,18 +1,6 @@
-html{
-    font-family: sans-serif;
-}
-
 body{
     height: 100%;
     overflow: hidden;
-}
-
-li:hover{
-    color: blue;
-    cursor: pointer;
-}
-
-h1{
 }
 
 #config{
@@ -27,52 +15,33 @@ h1{
     float: left;
 }
 
-
 #location{
     display: block;
     margin: 5px ;
     float: left;
 }
 
-#thingy {
-    display: inline-flex;
-    flex-direction: column;
-    outline: thin black solid;
-    position: relative;
+#browser {
     height: 50vh;
-    width: 24%;
-    overflow-y: auto;
+    width: 34%;
     float: left;
+    margin-left: 5px;
+    margin-bottom: 5px;
 }
 
-#thingy div:hover{
-    box-shadow: 2px 2px 5px rgba(0,0,0,.2);
+#contentPanel {
+    overflow-y: auto;
+    height: 92.7%;
 }
 
-#datastreamlist span{
-    margin-right: 20px;
-    display: inline;
-    float: right;
-    padding: 5px;
-    background: #ccc;
-}
-#datastreamlist span:hover{
-    background: dimgrey;
-    cursor: pointer;
-}
-
-
-
-#thingy div{
-    flex-grow: 1;
-    outline: 1px solid black;
+#bbb {
+    margin-top: 5px ;
 }
 
 #map{
     z-index: 0;
-    margin-bottom: 5px;
     height: 50vh;
-    width: 75%;
+    width: 65%;
     float: right;
 }
 
@@ -85,8 +54,6 @@ h1{
     position: absolute !important;
     top: 15vh !important;
 }
-
-
 
 .highcharts-data-table table {
     font-family: Verdana, sans-serif;
@@ -115,5 +82,3 @@ h1{
 .highcharts-data-table tr:hover {
     background: #f1f7ff;
 }
-
-
