--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -31,7 +31,7 @@ body{
 
 #contentPanel {
     overflow-y: auto;
-    height: 92.7%;
+    height: 100vh;
 }
 
 #bbb {
@@ -46,6 +46,7 @@ body{
 }
 
 #chart{
-    width: 100%;
-    height: 48vh;
+    width: 65%;
+    height: 50vh;
+    float: right;
 }
