--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -1,18 +1,6 @@
-html{
-    font-family: sans-serif;
-}
-
 body{
     height: 100%;
     overflow: hidden;
-}
-
-li:hover{
-    color: blue;
-    cursor: pointer;
-}
-
-h1{
 }
 
 #config{
@@ -27,93 +15,40 @@ h1{
     float: left;
 }
 
-
 #location{
     display: block;
     margin: 5px ;
     float: left;
 }
 
-#thingy {
-    display: inline-flex;
-    flex-direction: column;
-    outline: thin black solid;
-    position: relative;
+#browser {
     height: 50vh;
     width: 24%;
-    overflow-y: auto;
     float: left;
+    margin-left: 5px;
+    margin-bottom: 5px;
 }
 
-#thingy div:hover{
-    box-shadow: 2px 2px 5px rgba(0,0,0,.2);
+#contentPanel {
+    overflow-y: auto;
+    height: 100vh;
 }
 
-#datastreamlist span{
-    margin-right: 20px;
-    display: inline;
-    float: right;
-    padding: 5px;
-    background: #ccc;
-}
-#datastreamlist span:hover{
-    background: dimgrey;
-    cursor: pointer;
-}
-
-
-
-#thingy div{
-    flex-grow: 1;
-    outline: 1px solid black;
+#bbb {
+    margin-top: 5px ;
 }
 
 #map{
     z-index: 0;
-    margin-bottom: 5px;
     height: 50vh;
     width: 75%;
     float: right;
 }
 
 #chart{
-    width: 100%;
-    height: 48vh;
-}
-
-.highcharts-contextmenu{
-    position: absolute !important;
-    top: 15vh !important;
-}
-
-
-
-.highcharts-data-table table {
-    font-family: Verdana, sans-serif;
-    border-collapse: collapse;
-    border: 1px solid #EBEBEB;
-    margin: 10px auto;
-    text-align: center;
-    width: 100%;
-    max-width: 500px;
-}
-.highcharts-data-table caption {
-    padding: 1em 0;
-    font-size: 1.2em;
-    color: #555;
-}
-.highcharts-data-table th {
-    font-weight: 600;
-    padding: 0.5em;
-}
-.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
-    padding: 0.5em;
-}
-.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
-    background: #f8f8f8;
-}
-.highcharts-data-table tr:hover {
-    background: #f1f7ff;
+    width: 75%;
+    height: 50vh;
+    float: right;
 }
 
 
@@ -227,5 +162,3 @@ h1{
     }
 
 }
-
-
