--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -1,6 +1,7 @@
 body{
     height: 100%;
     overflow: hidden;
+    background-color: #2a2a2b !important;
 }
 
 #config{
@@ -38,6 +39,12 @@ body{
     margin-top: 5px ;
 }
 
+.list-group-item, .card-title, .card-outline-info{
+    background-color: #3f3f40 !important;
+    color: #bfbfc0 !important;
+}
+
+
 #map{
     z-index: 0;
     height: 50vh;
@@ -50,6 +57,7 @@ body{
     height: 50vh;
     float: right;
 }
+
 
 
 /* LOGIN */
