added Configure and Retire button in card-header

--- a/resources/static/css/styles.css
+++ b/resources/static/css/styles.css
@@ -39,11 +39,14 @@ body{
     margin-top: 5px ;
 }
 
+#header-button{
+    margin-right: 10px ;
+}
+
 .list-group-item, .card-title, .card-outline-info{
     background-color: #3f3f40 !important;
     color: #bfbfc0 !important;
 }
-
 
 #map{
     z-index: 0;
@@ -57,8 +60,6 @@ body{
     height: 50vh;
     float: right;
 }
-
-
 
 /* LOGIN */
 
